--- a/scss/pages/index/_splash.scss
+++ b/scss/pages/index/_splash.scss
@@ -1,5 +1,6 @@
 .hero-splash {
 	height: 100vh;
+	min-height: rem-calc(400);
 	background: rgba(103,128,154,.20) url('/img/splash/hero-large.png') center/cover no-repeat;
 	background-blend-mode: multiply;
 
