--- a/css/app.css
+++ b/css/app.css
@@ -9170,6 +9170,13 @@ header {
   .hero-splash .nav-bar a.is-active {
     text-decoration: underline; }
 
+.hero-splash .nav-bar .logo {
+  opacity: 0; }
+
+.hero-splash .nav-bar.is-stuck .logo {
+  opacity: 1;
+  transition: opacity .1s ease-in; }
+
 .hero-splash {
   height: 100vh;
   min-height: 25rem;
