--- a/css/app.css
+++ b/css/app.css
@@ -6,6 +6,7 @@
  * Licensed under MIT Open Source
  */
 @import url("https://fonts.googleapis.com/css2?family=Parisienne&display=swap");
+@import url("https://use.typekit.net/yrz5wte.css");
 @media print, screen and (min-width: 40em) {
   .reveal.large, .reveal.small, .reveal.tiny, .reveal {
     right: auto;
@@ -7876,6 +7877,11 @@ ol.list-upper-roman {
   font-style: normal;
   font-weight: 400; }
 
+.ff-museo-500, .hero-splash .h2-tagline, .hero-splash .h1-headline span.slogan {
+  font-family: museo-sans,sans-serif;
+  font-weight: 500;
+  font-style: normal; }
+
 .font-weight-100,
 .font-weight-ultralight {
   font-weight: 100 !important; }
@@ -9189,7 +9195,6 @@ header {
     text-shadow: 0 0 1.25rem #000; }
     .hero-splash .h1-headline span.slogan {
       display: block;
-      font-family: AvenirNext-Medium;
       font-size: 2.5rem;
       color: #fff; }
     @media screen and (min-width: 68.75em) {
@@ -9198,7 +9203,6 @@ header {
         .hero-splash .h1-headline span.slogan {
           font-size: 2.9375rem; } }
   .hero-splash .h2-tagline {
-    font-family: AvenirNext-Medium;
     font-size: 1.625rem;
     color: #fff;
     text-shadow: 0 0.125rem 2.5rem #000; }
