--- a/scss/pages/index/_splash.scss
+++ b/scss/pages/index/_splash.scss
@@ -1,7 +1,7 @@
 .hero-splash {
 	height: 100vh;
 	min-height: rem-calc(400);
-	background: rgba(103,128,154,.20) url('/img/splash/hero-large.png') center/cover no-repeat;
+	background: rgba(103,128,154,.25) url('/img/splash-images/1/splash-1920x1200.jpg') center/cover no-repeat;
 	background-blend-mode: multiply;
 
 	.h1-headline {
