--- a/scss/pages/index/_index-old.scss
+++ b/scss/pages/index/_index-old.scss
@@ -384,7 +384,7 @@ header {
 
 @media only screen and (min-width : 64em) {
 	#index.index .splash .bgScrim {
-		// background-image: radial-gradient(48% 195%, rgba(105, 123, 153, .4) 57%, rgba(0, 0, 0, .3) 100%);
+		background-image: radial-gradient(48% 195%, rgba(105, 123, 153, .4) 57%, rgba(0, 0, 0, .3) 100%);
 	}
 }
 
