Move all old header styles to new partial

--- a/scss/pages/index/_index.scss
+++ b/scss/pages/index/_index.scss
@@ -1,5 +1,6 @@
 @import '_old-index.scss';
 @import '_old-nav.scss';
+@import '_old-header.scss';
 
 @import '_splash.scss';
 @import '_nav-large.scss';
