--- a/css/app.css
+++ b/css/app.css
@@ -14355,8 +14355,24 @@ header {
 }
 
 @media screen and (max-width: 39.99875em) {
-  .main-menu {
+  #example-menu.top-bar {
+    padding: 0;
+  }
+  #example-menu.top-bar .menu {
     width: 100%;
+  }
+  #example-menu.top-bar .menu li {
+    background: #f9f9f9;
+    border-bottom: 1px solid #333;
+    padding: 0;
+  }
+  #example-menu.top-bar .menu li:hover {
+    background: #fffeb3;
+  }
+  #example-menu.top-bar .menu a {
+    color: #333;
+    font-weight: bold;
+    padding: 12px 16px;
   }
 }
 
