Styling title-bar

--- a/css/app.css
+++ b/css/app.css
@@ -14354,6 +14354,13 @@ header {
   text-shadow: 0 0.125rem 2.5rem #000;
 }
 
+.title-bar {
+  background: #697b99;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.3);
+  height: 55px;
+}
+
 @media screen and (max-width: 39.99875em) {
   #main-menu.top-bar {
     padding: 0;
@@ -14368,6 +14375,7 @@ header {
   }
   #main-menu.top-bar .menu li:hover {
     background: #fffeb3;
+    text-decoration: underline;
   }
   #main-menu.top-bar .menu a {
     color: #333;
