--- a/scss/pages/index/_nav-small.scss
+++ b/scss/pages/index/_nav-small.scss
@@ -1,3 +1,9 @@
+.title-bar {
+	background: #697b99;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .3);
+	height: 55px;
+}
+
 .top-bar#main-menu {
 	@include breakpoint(small only) {
 		padding: 0;
@@ -12,6 +18,7 @@
 
 				&:hover {
 					background: #fffeb3;
+					text-decoration: underline;
 				}
 			}
 
