--- a/scss/pages/index/_nav-small.scss
+++ b/scss/pages/index/_nav-small.scss
@@ -2,6 +2,26 @@
 	background: #697b99;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .3);
 	height: 55px;
+	// position: relative;
+
+	.logo {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 100;
+
+		img {
+			max-width: 65px;
+		}
+
+		h1 {
+			text-shadow: 0 6px 10px rgba(0, 0, 0, .3);
+			color: #fefefe;
+			font-size: 60px;
+			position: absolute;
+			top: 0;
+		}
+	}
 }
 
 .top-bar#main-menu {
