--- a/scss/pages/index/_old-header.scss
+++ b/scss/pages/index/_old-header.scss
@@ -7,21 +7,21 @@ header {
 	z-index: 100;
 }
 
-.logo img {
-	position: absolute;
-	max-width: 65px;
-	height: auto;
-	float: left;
-	z-index: 55;
-}
+// .logo img {
+// 	position: absolute;
+// 	max-width: 65px;
+// 	height: auto;
+// 	float: left;
+// 	z-index: 55;
+// }
 
-.logo h1 {
-	position: absolute;
-	text-shadow: 0 6px 10px rgba(0, 0, 0, .3);
-	z-index: 55;
-	color: #fefefe;
-	font-size: 60px;
-}
+// .logo h1 {
+// 	position: absolute;
+// 	text-shadow: 0 6px 10px rgba(0, 0, 0, .3);
+// 	z-index: 55;
+// 	color: #fefefe;
+// 	font-size: 60px;
+// }
 
 @media screen and (min-width: 751px) {
 	.logo h1 {
