--- a/css/app.css
+++ b/css/app.css
@@ -14387,6 +14387,18 @@ header {
   }
 }
 
+@media screen and (max-width: 39.99875em) {
+  .no-js .top-bar {
+    display: none;
+  }
+}
+
+@media print, screen and (min-width: 40em) {
+  .no-js .title-bar {
+    display: none;
+  }
+}
+
 .desktop-nav-bar {
   background: #697b99;
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.3);
