--- a/scss/pages/index/_nav-small.scss
+++ b/scss/pages/index/_nav-small.scss
@@ -49,3 +49,17 @@
 		}
 	}
 }
+
+.no-js {
+	@include breakpoint(small only) {
+		.top-bar {
+			display: none;
+		}
+	}
+
+	@include breakpoint(medium) {
+		.title-bar {
+			display: none;
+		}
+	}
+}
