Null import of old nav styles

--- a/scss/pages/index/_index.scss
+++ b/scss/pages/index/_index.scss
@@ -1,5 +1,5 @@
 @import '_old-index.scss';
-@import '_old-nav.scss';
+// @import '_old-nav.scss';
 @import '_old-header.scss';
 
 @import '_splash.scss';
