--- a/scss/pages/index/_nav-medium.scss
+++ b/scss/pages/index/_nav-medium.scss
@@ -1,15 +1,20 @@
 .top-bar#main-menu {
 	@include breakpoint(medium only) {
-
 		.logo-wrap {
 			position: absolute;
 			top: 0;
 			left: 0;
-			padding-top: rem-calc(4);
-			padding-left: rem-calc(8);
 
 			img {
 				max-width: 70px;
+			}
+
+			h1 {
+				text-shadow: 0 6px 10px rgba(0, 0, 0, .3);
+				color: #fefefe;
+				font-size: 60px;
+				position: absolute;
+				top: rem-calc(2);
 			}
 		}
 
