--- a/scss/pages/index/_old-index.scss
+++ b/scss/pages/index/_old-index.scss
@@ -96,25 +96,25 @@ body {
 	margin: 0 auto 32px;
 }
 
-#index.index .splash .bgScrim {
-	background: rgba(105, 123, 153, .4);
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	z-index: 1;
-	top: 0;
-	left: 0;
-}
+// #index.index .splash .bgScrim {
+// 	background: rgba(105, 123, 153, .4);
+// 	width: 100%;
+// 	height: 100%;
+// 	position: absolute;
+// 	z-index: 1;
+// 	top: 0;
+// 	left: 0;
+// }
 
-#backgroundVideo {
-	position: absolute;
-	z-index: -5;
-	top: 50%;
-	left: 50%;
-	min-width: 100%;
-	min-height: 100%;
-	transform: translateX(-50%) translateY(-50%);
-}
+// #backgroundVideo {
+// 	position: absolute;
+// 	z-index: -5;
+// 	top: 50%;
+// 	left: 50%;
+// 	min-width: 100%;
+// 	min-height: 100%;
+// 	transform: translateX(-50%) translateY(-50%);
+// }
 
 @media only screen and (min-width : 600px) {
 	#index.index .splash h1 {
