--- a/scss/pages/index/_old-index.scss
+++ b/scss/pages/index/_old-index.scss
@@ -1,23 +1,23 @@
 a.button {
-	border: none;
-	cursor: pointer;
-	line-height: normal;
-	position: relative;
-	z-index: 0;
-	text-align: center;
-	display: inline-block;
-	border-radius: 4px;
+	// border: none;
+	// cursor: pointer;
+	// line-height: normal;
+	// position: relative;
+	// z-index: 0;
+	// text-align: center;
+	// display: inline-block;
+	// border-radius: 4px;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .3);
-	font-size: 21px;
-	padding: 16px 32px;
-	text-decoration: none;
-	color: #333;
-	background: #fffeb3;
+	// font-size: 21px;
+	// padding: 16px 32px;
+	// text-decoration: none;
+	// color: #333;
+	// background: #fffeb3;
 }
 
 a.button:hover {
-	color: #000;
-	background: #fffe90;
+	// color: #000;
+	// background: #fffe90;
 	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
 }
 
