--- a/scss/pages/index/_temp.scss
+++ b/scss/pages/index/_temp.scss
@@ -1,4 +1,10 @@
 .small-splash {
-	background: rgba(0,0,0,0.25) url("/img/splash-images/1/splash-small.jpg") center/cover no-repeat;
+	background: rgba(0,0,0,.25) url('/img/splash-images/1/splash-small.jpg') center/cover no-repeat;
 	background-blend-mode: multiply;
+	min-height: 540px;
+
+	@include breakpoint(medium) {
+		background-image: url('/img/splash-images/1/splash-medium.jpg');
+		min-height: 600px;
+	}
 }
