--- a/css/app.css
+++ b/css/app.css
@@ -14274,6 +14274,23 @@ header {
   min-height: 540px;
 }
 
+.small-splash .h1 {
+  text-shadow: 0 0 10px #000;
+  margin-bottom: 40px;
+  font-size: 70px;
+  line-height: 1;
+}
+
+.small-splash .h1 span {
+  font-size: 25px;
+}
+
+.small-splash .h2 {
+  text-shadow: 0 0 10px #000;
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+
 @media print, screen and (min-width: 40em) {
   .small-splash {
     background-image: url("/img/splash-images/1/splash-medium.jpg");
