--- a/css/app.css
+++ b/css/app.css
@@ -14291,6 +14291,10 @@ header {
   margin-bottom: 40px;
 }
 
+.small-splash .button {
+  font-size: 1rem;
+}
+
 @media print, screen and (min-width: 40em) {
   .small-splash {
     background-image: url("/img/splash-images/1/splash-medium.jpg");
