--- a/scss/pages/index/_temp.scss
+++ b/scss/pages/index/_temp.scss
@@ -20,6 +20,10 @@
 		margin-bottom: 40px;
 	}
 
+	.button {
+		font-size: rem-calc(16);
+	}
+
 	@include breakpoint(medium) {
 		background-image: url('/img/splash-images/1/splash-medium.jpg');
 		min-height: 600px;
