--- a/scss/pages/index/_temp.scss
+++ b/scss/pages/index/_temp.scss
@@ -3,18 +3,18 @@
 	background-blend-mode: multiply;
 	min-height: 540px;
 
-	.h1 {
+	.h1-headline {
 		text-shadow: 0 0 10px #000;
 		margin-bottom: 40px;
 		font-size: 70px;
 		line-height: 1;
 
-		span {
+		.slogan {
 			font-size: 25px;
 		}
 	}
 
-	.h2 {
+	.h2-tagline {
 		text-shadow: 0 0 10px #000;
 		font-size: 20px;
 		margin-bottom: 40px;
