--- a/scss/pages/index/_temp.scss
+++ b/scss/pages/index/_temp.scss
@@ -6,6 +6,10 @@
 	.headline-wrap {
 		max-width: 320px;
 		margin: 0 auto;
+
+		@include breakpoint(520) {
+			max-width: none;
+		}
 	}
 
 	.h1-headline {
