--- a/scss/pages/index/_splash.scss
+++ b/scss/pages/index/_splash.scss
@@ -45,17 +45,25 @@
 	background: rgba(103,128,154,.25) url('/img/splash-images/1/splash-1920x1200.jpg') center/cover no-repeat;
 	background-blend-mode: multiply;
 
+	.prose-wrap {
+		padding-left: 80px;
+		padding-top: 130px;
+	}
+
 	.h1-headline {
 		@extend .ff-parisienne;
 		font-size: rem-calc(120);
 		color: #fff;
 		text-shadow: 0 0 rem-calc(20) #000;
+		margin-top: -20px;
 
 		span.slogan {
 			@extend .ff-museo-500;
 			display: block;
 			font-size: rem-calc(40);
 			color: #fff;
+			padding-left: 80px;
+			margin-top: -40px;
 		}
 
 		@include breakpoint(1100) {
@@ -72,5 +80,6 @@
 		font-size: rem-calc(26);
 		color: #fff;
 		text-shadow: 0 rem-calc(2) rem-calc(40) #000;
+		padding-left: 130px;
 	}
 }
