--- a/css/app.css
+++ b/css/app.css
@@ -14105,23 +14105,22 @@ header {
 }
 
 .hero-splash .prose-wrap {
-  padding-left: 80px;
-  padding-top: 130px;
+  padding: 8.125rem 0 0 5rem;
 }
 
 .hero-splash .h1-headline {
   font-size: 7.5rem;
   color: #fff;
   text-shadow: 0 0 1.25rem #000;
-  margin-top: -20px;
+  margin-top: -1.25rem;
 }
 
 .hero-splash .h1-headline span.slogan {
   display: block;
   font-size: 2.5rem;
   color: #fff;
-  padding-left: 80px;
-  margin-top: -40px;
+  padding-left: 5rem;
+  margin-top: -2.5rem;
 }
 
 @media screen and (min-width: 68.75em) {
@@ -14137,7 +14136,7 @@ header {
   font-size: 1.625rem;
   color: #fff;
   text-shadow: 0 0.125rem 2.5rem #000;
-  padding-left: 130px;
+  padding-left: 8.125rem;
 }
 
 .title-bar {
